src/widgets/Mentor/PricingSection/ui/BonusesBlock/BonusesBlock.module.css
.bonus-block {
	padding: 14px;
	box-sizing: border-box;
	width: calc(50% - 10px);
}

.icon-wrapper {
	margin-top: 4px;
	width: 20px;
	height: 20px;
}

.description {
	white-space: pre-line;
}

@media (width < 1280px) {
	.bonus-blocks {
		flex-direction: column;
		width: calc(50% - 10px);
	}

	.bonus-block {
		flex: 1;
		justify-content: center;
		width: 100%;
		min-height: 226px;
	}

	.bonus-block-content {
		align-items: start;
		gap: 20px;
	}
}

@media (width < 768px) {
	.bonus-blocks {
		gap: 10px;
		width: 100%;
	}

	.bonus-block {
		padding: 10px;
		min-height: 0;
	}

	.description {
		white-space: normal
	}
}

